--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-13  Mark Kettenis  <kettenis@gnu.org>
+
+	* Makefile.in (xm-i386-sv32.h, tm-i386gas.h): Remove.
+
 2003-09-12  Christopher Faylor  <cgf@redhat.com>
 
 	* win32-nat.c: Reorganize so that defines used by target headers are
