--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-14  Michael Chastain  <mec@shout.net>
+
+	* config/m68k/nm-apollo68v.h: Delete.
+	* config/m68k/xm-apollo68v.h: Delete.
+
 2003-09-14  Andrew Cagney  <cagney@redhat.com>
 
 	* rs6000-tdep.c (rs6000_push_dummy_call): Fix typos.
