--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-15  David Lecomber  <dsl@sources.redhat.com>
+
+	* f-valprint.c: Apply array element printing limits to multi-dimensional arrays
+
 2003-09-14  Michael Chastain  <mec@shout.net>
 
 	* config/m68k/nm-apollo68v.h: Delete.
