--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-15  Kevin Buettner  <kevinb@redhat.com>
+
+	* dwarf2read.c (dwarf2_get_pc_bounds): Complain if offset
+	associated with DW_AT_ranges attribute is out of bounds.
+
 2003-09-15  David Lecomber  <dsl@sources.redhat.com>
 
 	* f-valprint.c: Apply array element printing limits to multi-dimensional arrays
